--- a/package.json
+++ b/package.json
@@ -10,20 +10,23 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
+    "@skeletonlabs/skeleton": "2.10.2",
+    "@skeletonlabs/tw-plugin": "0.4.0",
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@types/node": "22.3.0",
+    "autoprefixer": "10.4.20",
+    "postcss": "8.4.41",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
+    "tailwindcss": "3.4.10",
     "typescript": "^5.0.0",
     "vite": "^5.0.3",
-    "postcss": "8.4.41",
-    "autoprefixer": "10.4.20",
-    "tailwindcss": "3.4.10",
-    "@skeletonlabs/skeleton": "2.10.2",
-    "@skeletonlabs/tw-plugin": "0.4.0",
-    "vite-plugin-tailwind-purgecss": "0.3.3",
-    "@types/node": "22.3.0"
+    "vite-plugin-tailwind-purgecss": "0.3.3"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "socket.io-client": "^4.7.5"
+  }
 }
